--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && parcel build index.html",
+    "build": "rm -rf docs && parcel build index.html --out-dir docs",
     "start": "parcel index.html"
   },
   "keywords": [],
