--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "parcel": "^1.9.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-fullpage": "^0.1.18"
+    "react-fullpage": "^0.1.18",
+    "react-particles-js": "^2.3.0"
   }
 }
